--- a/src/components/forms/index.module.scss
+++ b/src/components/forms/index.module.scss
@@ -13,3 +13,16 @@ form {
 .button {
   margin: 8px 0;
 }
+
+.loginFormPassword {
+  margin: 8px 0;
+}
+
+.footerText {
+  & :last-child {
+    text-decoration: underline;
+    color: #a4a4a4;
+  }
+  margin: 10px 0;
+  text-align: center;
+}
